--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+remappings=["@openzeppelin=lib/openzeppelin-contracts", "@foundry-devops=lib/foundry-devops/src"]
+ffi = true
+fs_permissions = [{access = "read", path = "./img/"}]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
